Change operator order so that binary 'or' and binary 'and' are not on the same level, but so that 'and' comes before 'or'.  This is to match the standard C precedence.  Also add support for the % (modulus), < (binary left shift), and > (binary right shift) operators.
Signed-off-by: Mike Frysinger <vapier@gmail.com>

--- a/README
+++ b/README
@@ -59,12 +59,14 @@ Specification:
 
 Operator priorities:
 
-     LOW    '='        assignment
-            or  and    binary or/binary and
-            '+' '-'    addition/subtruction
-            '*' '/'    multiply/divide
-            '-'        unary minus
-     HIGH   '^'        exponentation
+     LOW    '='         assignment
+            or          binary or
+            and         binary and
+            '>' '<'     binary left/right shift
+            '+' '-'     addition/subtruction
+            '*' '/' '%' multiply/divide/modulus
+            '-'         unary minus
+     HIGH   '^'         exponentation
 
 Syntax:
 
