add support for 0X1234 formats
Allowing an uppercase 0X prefix, while detestable, is a common
format in many languages.  Might as well support it too.

Signed-off-by: Mike Frysinger <vapier@gmail.com>

--- a/README
+++ b/README
@@ -22,6 +22,7 @@ Specification:
  Number specification:
 
     0x1234              hexadecimal
+    0X1234              hexadecimal
     0o1234              octal
     0c1234              octal
     0b0101              binary
