support underscores as literal separators with hex/oct/bin numbers
Some languages support underscores like 0xAAAA_FFFF_BBBB for breaking
it up visually.  Update pcalc to ignore that.

Signed-off-by: Mike Frysinger <vapier@gmail.com>

--- a/README
+++ b/README
@@ -30,6 +30,9 @@ Specification:
     0y0101              binary
     123456              decimal
 
+    Numbers may have underscores in them as seprators for visibility.
+    0xFFFF_0000   0o777_555   0b1111_0000   12_34_56_78
+
  Built in functions:
 
     sin             mathematical sinus
