--- a/README
+++ b/README
@@ -32,6 +32,8 @@ Specification:
 
     Numbers may have underscores in them as seprators for visibility.
     0xFFFF_0000   0o777_555   0b1111_0000   12_34_56_78
+    Decimal numbers may also have commas in them.
+    1,100,234
 
  Built in functions:
 
