switch to long double to increase integer precision
Since double's tend to have 53-bits of precision, doing 64-bit integer
math can quickly (and perniciously) go wrong.  Switch to long doubles
everywhere to fix that on most current platforms -- the standard allows
for double & long double to be equal, but 64-bit systems are basically
guaranteed to have higher precision.

This is a bandaid until pcalc can be switched to an arbitrary precision
math library like GMP.

Fixes #11.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 - try to handle unsigned/signed better
-- convert to 64bit numbers and gmp
+- convert to gmp
 - allow specifying of exact bit sizes
 - allow unicode output/input ?
 - support formatting output using literal separators
